# my_dynamixel_controller

./: CMakeLists.txt  README.md  package.xml
config/: dual_motor.yaml  dual_motor_torque.yaml  joints_trajectory_controller.yaml  multi_turn.yaml  old.tilt.yaml
launch/: controller_manager.launch  my_dynamixel_controller.launch
msg/: MsgDynamixel.msg
src/: dynamixel_publisher.cpp  dynamixel_subscriber.cpp
src/old /: 1dynamixel_publisher.cpp
